--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "knex": "^3.1.0",
     "nodemon": "^3.1.4",
     "sqlite3": "^5.0.8"
   }
